--- a/features/kv/style.css
+++ b/features/kv/style.css
@@ -14,6 +14,22 @@
 
   padding: 52px 0 0 72px;
 }
+.key-visual__second {
+  width: 100%;
+  height: 480px;
+  box-sizing: border-box;
+
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(https://source.unsplash.com/user/c_v_r/1920x1080);
+  background-size: cover;
+  filter: brightness(200%);
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  padding: 52px 0 0 72px;
+}
 
 .key-visual__text-wrap {
   color: #fff;
@@ -31,6 +47,12 @@
 
 @media screen and (max-width: 768px) {
   .key-visual {
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .key-visual__second {
     background-size: cover;
     align-items: center;
     justify-content: center;
